# ghoshell-container

./: RELEASES.md  pyproject.toml
